# spooderman

./: .env  Cargo.toml  Dockerfile  README.md  SomeFile.txt  courses.json  dockerfile  git-diff.sh  reduced_times.json  run.sh  s.txt  test.txt  times.json
.github/workflows/: docker.yml  rust-ci.yml  test-scraper.yml
sql/: down.sql  up.sql
sql/Classes/: down.sql  down_just_year.sql  up.sql  up_just_year.sql
sql/Courses/: down.sql  down_just_year.sql  up.sql  up_just_year.sql
sql/Times/: down.sql  down_just_year.sql  up.sql  up_just_year.sql
src/: class_scraper.rs  config.rs  course_scraper.rs  hasuragres_b_insert.rs  lib.rs  main.html  main.rs  ratelimit.rs  requests.rs  school_area_scraper.rs  scraper.rs  scraping_context.rs  subject_area_scraper.rs  text_manipulators.rs  url_invalid_error.rs  utils.rs
