[package]
name = "spooderman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
chrono = "0.4.31"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
select = "0.5"
scraper = "0.12"    
dotenv = "0.15.0"
regex = "1.10.4"
logger = "0.4.0"
log = "0.4.21"
env_logger = "0.11.3"
serde = "1.0.203"
