[package]
edition = "2021"
name = "spooderman"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.4.1"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
html5ever = "0.29.0"
log = "0.4.21"
logger = "0.4.0"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.9", features = ["json"] }
roxmltree = "0.20.0"
scraper = "0.22.0"
select = "0.6.0"
serde = "1.0.203"
serde_json = "1.0.127"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1", features = ["full"] }
