[package]
edition = "2024"
name = "spooderman"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
chrono = "0.4.39"
derive-new = "0.7.0"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.6"
envy = "0.4.2"
futures = "0.3.31"
governor = "0.10.0"
html5ever = "0.29.0"
log = "0.4.22"
logger = "0.4.0"
nonzero_ext = "0.3.0"
parse-display = "0.10.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json"] }
roxmltree = "0.20.0"
scraper = "0.23.1"
serde = "1.0.217"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.42.0", features = ["full"] }
